--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,17 +100,64 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 86%; 
+  width: 90%; 
   margin: 0 auto;
 }
+
+* { font-family: serif; }
+
 /*=================================
   Header styling starts here
 =================================*/
 
+header,
+footer {
+  padding: 20px;
+  background-color: #000;
+}
 
+header .wrapper {
+  display: flex;
+  justify-content: space-between;
+}
 
+header h1 { 
+  flex-basis: 10%;
+  font-family: serif;
+  font-size: 30px;
+  text-transform: uppercase;
+}
 
+header h1 a { color: #fff;}
 
+header h1 a:hover { 
+  color: #5f9ea0; 
+  transition: 0.5s;
+}
+
+.header-text { 
+  margin-top: 8px;
+  flex-basis: 12%;
+}
+.header-text div { display: inline-block; }
+
+.header-text div a { 
+  color: #A3A3A3;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
+.header-text div:first-child {
+  padding-right: 6%;
+  border-right: 2px solid #A3A3A3;
+}
+
+.header-text div:last-child { padding-left: 4%; }
+
+.header-text div a:hover {
+  color: #fff;
+  transition: 0.5s;
+}
 
 /*=================================
   Header styling ends here
@@ -120,8 +167,54 @@ li {
   main styling starts here
 =================================*/
 
+section h3 {
+  margin: 30px 0;
+  font-size: 18px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
 
+.cardElem { display: flex; }
 
+.cardElem li {
+  width: 31%;
+  border: 2px solid #000;
+  border-radius: 3%;
+  margin-left: 6%;
+  margin-bottom: 50px;
+}
+
+.cardElem li:first-child { margin-left: 0; }
+
+.cardElem li h4 {
+  padding: 15px;
+  border-radius: 5%;
+  margin-bottom: 360px;
+  background-color: #ED1C24;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.cardElem li:nth-child(2) h4 { background-color: #F26522; }
+.cardElem li:nth-child(3) h4 { background-color: #FFFF00; }
+
+.btnElem { 
+  margin-left: 10%;
+  margin-bottom: 30px;
+}
+
+.btnElem li { margin-left: 2%; }
+.btnElem li:first-child { margin-left: 0; }
+
+.btnElem li button {
+  color: #fff;
+  padding: 10px 25px;
+  background-color: #000;
+  border-radius: 10px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
 
 
 
@@ -134,6 +227,19 @@ li {
 /*=================================
   footer styling starts here
 =================================*/ 
+
+
+footer div a {
+  color: #fff;
+  font-size: 30px;
+  font-family: serif;
+  text-transform: uppercase;
+}
+
+footer div a:hover {
+  color: #A3A3A3;
+  transition: 0.5s;
+}
 
 
 
